feat: update to 6.10